# llm_gateway

./: .env.example  .gitignore  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: routes_admin.py  routes_chat.py  routes_health.py  routes_metrics.py  routes_models.py  routes_usage.py
app/audit/: __init__.py  audit_logger.py
app/auth/: api_key_auth.py  tenant_context.py
app/budgets/: __init__.py  budget_service.py  budget_store.py  cost_calculator.py
app/evals/: validators.py
app/observability/: metrics.py
app/providers/: base.py  mock_provider.py
app/resilience/: circuit_breaker.py  rate_limiter.py
app/routing/: __init__.py  model_router.py
app/schemas/: chat.py
app/security/: __init__.py  pii_masker.py  prompt_validator.py
docs/: api_reference.md  architecture.md  budgets.md  demo_script.md
tests/: test_budgets.py  test_chat_api.py  test_security.py
